--- a/portfolio.html
+++ b/portfolio.html
@@ -27,9 +27,9 @@
                     
                 <!-- Right banner for site -->
                 <div class=right-banner>
-                    <h2 class="green-text center-stuff">Connect with Me</h2>
-                    <!-- image links to me content -->
-                    <div class=center-stuff>
+                    <h2 class="green-text center-stuff spacing">Connect with Me</h2>
+                    <!-- image links to my content -->
+                    <div class="center-stuff spacing">
                         <a href="https://github.com/brianstry/Basic-Portfolio"><img src="assets/image/github_square_black-128.png" alt="git hub image" height="50px"></a>
                         <a href="https://www.linkedin.com/feed/"><img src="assets/image/linkedin_square_color-128.png" alt="Linkedin image" height="50px"></a>
                         <a href="https://www.linkedin.com/feed/"><img src="assets/image/stackoverflow-128.png" alt="Stackoverflow image" height="50px"></a>
