--- a/contact.html
+++ b/contact.html
@@ -38,6 +38,7 @@
 
                     <!-- Main body of text on current page -->
                 <div class=main-section>
+                    <h2 class=green-text><Strong>Contact me.</Strong></h2>
                     <p>To contact me please email me </p><a href="mailto:brianstry@hotmail.com?Subject=Hello" target="_top">Here</a>
                 </div>
         </div>
