--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     <!-- Main body of text on current page -->
                 <div class=main-section>
-                    <h2 class=green-text>About me</h2>
+                    <h2 class=green-text><strong>About me</strong></h2>
                     <div style="float:left">
                         <img src="assets/image/my-self.jfif" alt="Image of myself">
                     </div>
