--- a/portfolio.html
+++ b/portfolio.html
@@ -38,6 +38,7 @@
 
                     <!-- Main body of text on current page -->
                 <div class=main-section>
+                    <h2 class=green-text><strong>Portfolio</strong></h2>
                     <table>
                         <tr>
                             <div class=container>
